--- a/style.css
+++ b/style.css
@@ -2,6 +2,6 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   
 }
-.pink-text {
-  color: blue;
+.pink-font {
+  color: pink;
 }
